[project]
name = "features"
authors = [{ name = "Sebastian Bank", email = "sebastian.bank@uni-leipzig.de" }]
description = "Feature set algebra for linguistics"
keywords = ["lattice", "morphology", "phonology", "learning", "fca"]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  "concepts~=0.7",
  "fileconfig~=0.5",
  "graphviz~=0.7",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/xflr6/features"
Documentation = "https://features.readthedocs.io"
Changelog = "https://features.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/xflr6/features/issues"
CI = "https://github.com/xflr6/features/actions"
Coverage = "https://codecov.io/gh/xflr6/features"

[project.optional-dependencies]
dev = ["build", "wheel", "twine", "flake8", "Flake8-pyproject", "pep8-naming", "tox>=3"]
test = ["pytest>=7", "pytest-cov"]
docs = ["sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.package-data]
features = ["config.ini"]

[tool.setuptools.dynamic]
version = { attr = "features.__version__" }

[tool.flake8]
exclude = ["docs", "build", ".tox"]
ignore = ["E126", "E128", "W503"]
max-line-length = 100

[tool.pytest.ini_options]
minversion = "6"
testpaths = ["README.rst", "docs", "features", "tests"]
addopts = [
  "--doctest-modules",
  "--doctest-glob='*.rst'", "--ignore=docs/conf.py",
  "--cov", "--cov-report=term", "--cov-report=html",
  "--strict-config", "--strict-markers",
]
log_cli_level = "WARNING"
log_file = "test-log.txt"
log_file_level = "DEBUG"

[tool.coverage.run]
source = ["features"]
branch = false

[tool.tox]
legacy_tox_ini = """
  [tox]
  envlist = py{314,313,312,311,310}
  skip_missing_interpreters = true

  [testenv]
  extras = test
  commands = python -X dev run-tests.py {posargs}
"""
