[metadata]
license_file = LICENSE.txt

[sdist]
formats = zip

[tool:pytest]
minversion = 4
testpaths = README.rst docs features tests
addopts =
  --doctest-modules --doctest-glob='*.rst' --ignore=docs/conf.py
  --cov --cov-report=term --cov-report=html

[coverage:run]
source = features
branch = false

[flake8]
ignore = E126,E128,W503
max-line-length = 100
exclude = docs, .tox
